refactor: History 클래스 메모리 최적화
- 기존 코드는 각 라운드별 차량의 위치를 저장하고 있으므로 Positions가 라운드만큼 생기고, Position도 차량 * 라운드수 만큼 생겨 객체 생성 오버헤드가 크다.
- 위치 기록을 List<List<Long>>으로 두어 Long 타입의 위치값만 저장하고, Positions를 하나만 생성하여 라운드별 현재 위치만 나타내게 한다. 그에 따라 Position도 차량 개수만큼만 생겨 객체 생성을 최소화한다.